feat: add cypress and example test

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
     "sourceType": "module"
   },
   "ignorePatterns": [
-    "*.json"
+    "*.json",
+    "src/__tests__/e2e/support/*.ts"
   ],
   "plugins": ["@typescript-eslint", "jest", "cypress"],
   "rules": {
