--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
+    "@cypress/webpack-preprocessor": "^5.9.1",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.1",
@@ -31,13 +32,15 @@
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "cypress": "^8.6.0",
+    "cypress-plugin-retries": "^1.5.2",
     "eslint": "^7.23.0",
     "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.23.1",
@@ -49,7 +52,9 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-scss": "^3.21.0",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.2.3",
+    "webpack": "^5.58.2"
   },
   "license": "MIT"
 }
